--- a/less/variables.less
+++ b/less/variables.less
@@ -5,7 +5,7 @@
 
 
 // colors *************************
-@primaryColor: #6DA4F8;
+@primaryColor: rgb(222, 222, 223);
 @accentColor: #FD9BAA;
 @greens: #7DDFC3;
 @red-alert: #F27373;
