--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,7 @@ footer {
 }
 .hero .heroImgs #map {
   width: 100%;
+  border-radius: 10px;
 }
 .hero .heroText p {
   width: 100%;
@@ -231,6 +232,7 @@ footer {
   display: flex;
   flex-direction: column;
   padding: 2% 0;
+  border-radius: 10px;
 }
 .mainPics .topPics .dashboard .text,
 .mainPics .bottomPics .dashboard .text,
@@ -240,7 +242,8 @@ footer {
 .mainPics .bottomPics .mainTrips .text,
 .mainPics .topPics .tripSummary .text,
 .mainPics .bottomPics .tripSummary .text {
-  width: 90%;
+  margin: auto;
+  width: 60%;
   border: 4px solid white;
   border-radius: 10px;
 }
@@ -253,6 +256,7 @@ footer {
 .mainPics .topPics .tripSummary .text p,
 .mainPics .bottomPics .tripSummary .text p {
   text-align: center;
+  padding: 2.5% 0;
 }
 .mainPics .topPics .dashboard .imgContainer,
 .mainPics .bottomPics .dashboard .imgContainer,
@@ -285,54 +289,20 @@ footer {
   justify-content: space-between;
   background: #FFE6EA;
   padding: 2%;
-}
-.testimonials P {
-  text-align: center;
+  border-radius: 10px;
 }
 .testimonials .speech-bubble {
-  border-color: #F9FBFC;
+  border: 4px solid #5C6070;
+  border-radius: 10px;
 }
-.testimonials .strong {
-  font-weight: bold;
+.testimonials .speech-bubble P {
+  text-align: center;
+  font-size: 1.6rem;
 }
-.testimonials .firstCol {
-  width: 23%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.testimonials .firstCol img {
-  padding-top: 8%;
-}
-.testimonials .secondCol {
-  width: 23%;
-  display: flex;
-  flex-direction: column;
-  align-content: space-between;
-}
-.testimonials .secondCol .speech-bubble,
-.testimonials .secondCol .testImg {
-  height: 42%;
-}
-.testimonials .secondCol .speech-bubble {
-  padding-top: 15%;
-}
-.testimonials .thirdCol {
-  display: flex;
-  flex-direction: column-reverse;
-  width: 23%;
-}
-.testimonials .thirdCol .speech-bubble,
-.testimonials .thirdCol .testImg {
-  height: 48%;
-}
-.testimonials .thirdCol .speech-bubble {
-  padding-top: 30%;
-}
-.testimonials .fourthCol {
-  width: 23%;
-  display: flex;
-  flex-direction: column;
+.testimonials .speech-bubble .strong {
+  font-weight: 700;
+  font-size: 1.5rem;
+  font-style: italic;
 }
 .testimonials .testImg {
   display: flex;
@@ -340,4 +310,36 @@ footer {
 }
 .testimonials .testImg img {
   width: 100%;
+  border-radius: 10px;
+}
+.testimonials .firstCol,
+.testimonials .secondCol,
+.testimonials .thirdCol,
+.testimonials .fourthCol {
+  width: 23%;
+  display: flex;
+  flex-direction: column;
+}
+.testimonials .secondCol,
+.testimonials .thirdCol {
+  justify-content: space-between;
+}
+.testimonials .secondCol .speech-bubble,
+.testimonials .thirdCol .speech-bubble,
+.testimonials .secondCol .testImg,
+.testimonials .thirdCol .testImg {
+  height: 42%;
+}
+.testimonials .secondCol .speech-bubble,
+.testimonials .thirdCol .speech-bubble {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+.testimonials .thirdCol {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.testimonials .fourthCol .speech-bubble {
+  padding: 5%;
 }
