--- a/less/global.less
+++ b/less/global.less
@@ -42,4 +42,15 @@
     margin: 0 auto;  
   }
   
-  
+  .topPics {
+            .direction(column);
+            width: 100%;
+        }
+
+// *************************** MEDIA QUERIES ***************************
+
+@media @phone {
+  .container {
+    width:90%;
+  }
+}
