--- a/css/index.css
+++ b/css/index.css
@@ -163,6 +163,16 @@ p {
   width: 80%;
   margin: 0 auto;
 }
+.topPics {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+@media (max-width: 500px) {
+  .container {
+    width: 90%;
+  }
+}
 nav {
   flex-direction: row;
   display: flex;
@@ -171,7 +181,7 @@ nav {
 }
 nav .links {
   align-items: center;
-  width: 20%;
+  width: 35%;
   display: flex;
   justify-content: space-between;
 }
@@ -184,12 +194,56 @@ nav .links button {
   border-color: black;
   border-radius: 10px;
   padding: 4% 8%;
+  background: #E7F0FE;
+}
+nav .links button:hover {
+  background: #6DA4F8;
+}
+nav .links button a:hover {
+  color: white;
+}
+@media (max-width: 500px) {
+  nav {
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+  }
+  nav .links {
+    display: flex;
+    flex-direction: column;
+    padding-top: 2%;
+    width: 100%;
+  }
+  nav .links a,
+  nav .links button {
+    margin: 1%;
+  }
+  nav .links button {
+    width: 40%;
+    padding: 1.5% 2%;
+  }
 }
 footer {
   margin: 3% 0;
   padding: 1.5%;
   background: #B0BEC6;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+}
+footer .address {
+  border: 3px solid white;
+  width: 30%;
+  border-radius: 10px;
+  text-align: center;
+}
+@media (max-width: 500px) {
+  footer {
+    width: 100%;
+  }
+  footer .address {
+    width: 80%;
+  }
 }
 .hero {
   align-items: center;
@@ -217,8 +271,9 @@ footer {
 }
 .mainPics .topPics,
 .mainPics .bottomPics {
-  display: flex;
   justify-content: space-between;
+  display: flex;
+  flex-direction: row;
 }
 .mainPics .topPics .dashboard,
 .mainPics .bottomPics .dashboard,
@@ -270,6 +325,16 @@ footer {
   justify-content: center;
   padding-top: 3%;
 }
+.mainPics .topPics .dashboard .imgContainer img,
+.mainPics .bottomPics .dashboard .imgContainer img,
+.mainPics .topPics .userSummary .imgContainer img,
+.mainPics .bottomPics .userSummary .imgContainer img,
+.mainPics .topPics .mainTrips .imgContainer img,
+.mainPics .bottomPics .mainTrips .imgContainer img,
+.mainPics .topPics .tripSummary .imgContainer img,
+.mainPics .bottomPics .tripSummary .imgContainer img {
+  border-radius: 10px;
+}
 .mainPics .topPics .dashboard,
 .mainPics .bottomPics .dashboard,
 .mainPics .topPics .tripSummary,
@@ -283,7 +348,7 @@ footer {
   background: #FDB4BF;
 }
 .testimonials {
-  margin-top: 6%;
+  margin-top: 5%;
   margin-bottom: 3%;
   display: flex;
   justify-content: space-between;
@@ -342,4 +407,48 @@ footer {
 }
 .testimonials .fourthCol .speech-bubble {
   padding: 5%;
+}
+@media (max-width: 500px) {
+  .mainPics {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+  }
+  .mainPics .topPics,
+  .mainPics .bottomPics {
+    width: 100%;
+  }
+  .mainPics .topPics img,
+  .mainPics .bottomPics img {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .testimonials {
+    display: flex;
+    flex-direction: column;
+  }
+  .testimonials .firstCol,
+  .testimonials .secondCol,
+  .testimonials .thirdCol,
+  .testimonials .fourthCol {
+    width: 100%;
+  }
+  .testimonials .firstCol img,
+  .testimonials .secondCol img,
+  .testimonials .thirdCol img,
+  .testimonials .fourthCol img {
+    width: 100%;
+    margin: 5% 0;
+  }
+  .testimonials .firstCol .speech-bubble,
+  .testimonials .secondCol .speech-bubble,
+  .testimonials .thirdCol .speech-bubble,
+  .testimonials .fourthCol .speech-bubble {
+    padding: 5% 0;
+  }
+  .testimonials .thirdCol {
+    display: flex;
+    flex-direction: column;
+  }
 }
