--- a/less/header.less
+++ b/less/header.less
@@ -5,7 +5,7 @@ nav {
 
     .links {
         .align(center);
-        width: 20%;
+        width: 35%;
         .justify(space-between);
 
         a {
@@ -18,7 +18,42 @@ nav {
             border-color: black;
             border-radius: 10px;
             padding: 4% 8%;
-        }
+            background: #E7F0FE;
 
+            &:hover {
+                background: #6DA4F8;
+            }
+
+            a {
+                &:hover {
+                    color:white;
+                }
+            }
+        }
+    }
+}
+
+
+//********************* MEDIA QUERIES ******************
+
+@media @phone {
+    nav {
+        .direction(column);
+        .align(center);
+
+        .links {
+            .direction(column);
+            padding-top: 2%;
+            width: 100%;
+            
+            a, button {
+                margin: 1%;
+            }
+
+            button {
+                width: 40%;
+                padding: 1.5% 2%;
+            }
+        }
     }
 }
