made the table for the about page

--- a/css/index.css
+++ b/css/index.css
@@ -452,3 +452,12 @@ footer .address {
     flex-direction: column;
   }
 }
+.card-img-top {
+  width: 100%;
+  height: 30vw;
+  object-fit: cover;
+}
+.cardContainer {
+  background: black;
+  padding: 3%;
+}
