--- a/css/index.css
+++ b/css/index.css
@@ -452,12 +452,27 @@ footer .address {
     flex-direction: column;
   }
 }
-.card-img-top {
-  width: 100%;
-  height: 30vw;
-  object-fit: cover;
-}
 .cardContainer {
-  background: black;
+  background: #E7F0FE;
   padding: 3%;
+  border-radius: 10px;
+}
+.cardContainer .card {
+  border-radius: 10px;
+}
+.cardContainer .card .card-img-top {
+  width: 100%;
+  border-radius: 10px;
+  object-fit: scale-down;
+}
+.cardContainer .card .card-body {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.cardContainer .card .card-body .socialLinks {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
