--- a/css/index.css
+++ b/css/index.css
@@ -356,27 +356,6 @@ footer .address {
   padding: 2%;
   border-radius: 10px;
 }
-.testimonials .speech-bubble {
-  border: 4px solid #5C6070;
-  border-radius: 10px;
-}
-.testimonials .speech-bubble P {
-  text-align: center;
-  font-size: 1.6rem;
-}
-.testimonials .speech-bubble .strong {
-  font-weight: 700;
-  font-size: 1.5rem;
-  font-style: italic;
-}
-.testimonials .testImg {
-  display: flex;
-  justify-content: center;
-}
-.testimonials .testImg img {
-  width: 100%;
-  border-radius: 10px;
-}
 .testimonials .firstCol,
 .testimonials .secondCol,
 .testimonials .thirdCol,
@@ -385,8 +364,50 @@ footer .address {
   display: flex;
   flex-direction: column;
 }
+.testimonials .firstCol .speech-bubble,
+.testimonials .secondCol .speech-bubble,
+.testimonials .thirdCol .speech-bubble,
+.testimonials .fourthCol .speech-bubble {
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  padding: 1%;
+  border: 4px solid #5C6070;
+  border-radius: 10px;
+}
+.testimonials .firstCol .speech-bubble P,
+.testimonials .secondCol .speech-bubble P,
+.testimonials .thirdCol .speech-bubble P,
+.testimonials .fourthCol .speech-bubble P {
+  text-align: center;
+  font-size: 1.6rem;
+}
+.testimonials .firstCol .speech-bubble .strong,
+.testimonials .secondCol .speech-bubble .strong,
+.testimonials .thirdCol .speech-bubble .strong,
+.testimonials .fourthCol .speech-bubble .strong {
+  font-weight: 700;
+  font-size: 1.5rem;
+  font-style: italic;
+}
+.testimonials .firstCol .testImg,
+.testimonials .secondCol .testImg,
+.testimonials .thirdCol .testImg,
+.testimonials .fourthCol .testImg {
+  display: flex;
+  justify-content: center;
+}
+.testimonials .firstCol .testImg img,
+.testimonials .secondCol .testImg img,
+.testimonials .thirdCol .testImg img,
+.testimonials .fourthCol .testImg img {
+  width: 100%;
+  border-radius: 10px;
+}
 .testimonials .secondCol,
 .testimonials .thirdCol {
+  display: flex;
   justify-content: space-between;
 }
 .testimonials .secondCol .speech-bubble,
@@ -395,18 +416,9 @@ footer .address {
 .testimonials .thirdCol .testImg {
   height: 42%;
 }
-.testimonials .secondCol .speech-bubble,
-.testimonials .thirdCol .speech-bubble {
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-}
 .testimonials .thirdCol {
   display: flex;
   flex-direction: column-reverse;
-}
-.testimonials .fourthCol .speech-bubble {
-  padding: 5%;
 }
 @media (max-width: 500px) {
   .mainPics {
@@ -438,14 +450,13 @@ footer .address {
   .testimonials .secondCol img,
   .testimonials .thirdCol img,
   .testimonials .fourthCol img {
-    width: 100%;
     margin: 5% 0;
   }
   .testimonials .firstCol .speech-bubble,
   .testimonials .secondCol .speech-bubble,
   .testimonials .thirdCol .speech-bubble,
   .testimonials .fourthCol .speech-bubble {
-    padding: 5% 0;
+    padding: 5% 1%;
   }
   .testimonials .thirdCol {
     display: flex;
