--- a/less/landing.less
+++ b/less/landing.less
@@ -48,6 +48,7 @@
                 p {
                     text-align: center;
                     padding: 2.5% 0;
+                    font-weight: 900;
                 }
             }
             .imgContainer {
@@ -122,6 +123,16 @@
     
     .thirdCol {
         .direction(column-reverse);
+    }
+
+    .fourthCol {
+        .justify(center);
+        align-items: center;
+
+        .speech-bubble {
+            width: 90%;
+            padding:7% 5%;
+        }
     }
 }
 
